--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -25,7 +25,7 @@ knitr::kable('\\includegraphics[width=5in]{"../tables/01_predictors"}', col.name
 
 \pagebreak
 
-```{r re-comparison-1, fig.cap = "Population level effect of watershed land-use cover on lake TP and TN from six candidate models. Values shown are posterior medians (filled circles) and 95% credible intervals (solid lines). Also shown is a comparison to a zero effect (dashed line).", warning=FALSE, echo = FALSE}
+```{r re-comparison-1, fig.cap = "Population level effect of watershed land-use cover on lake TP and TN from six candidate models. Values shown are posterior medians (filled circles) and 95% credible intervals (solid lines). Also shown is a comparison to a zero effect (solid vertical line). Values that do not overlap zero are shaded in red. Coefficient estimates are reported relative to standardized predictor variables centered at zero with unit variance.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/re-comparison-1.pdf")
 ```
 
@@ -33,11 +33,11 @@ knitr::include_graphics("../figures/re-comparison-1.pdf")
 knitr::kable('\\includegraphics[width=5in]{"../tables/03_model_summary"}', col.names = NULL, caption = "Diagnostics for each model listed by regionally varying coefficient. Table is sorted by decreasing R2 and expected log predictive density.")
 ```
 
-```{r fe-1, fig.cap = "Global (fixed effect) coefficient values and credible intervals for best-fit lake TP and TN models. Values that do not overlap zero are shaded in red. Horizontal bars separate coefficients in distinct predictor categories. Coefficient estimates are reported relative to standardized predictor variables centered at zero with unit variance.", warning=FALSE, echo = FALSE}
+```{r fe-1, fig.cap = "Global (fixed effect) coefficient values and credible intervals for best-fit lake TP and TN models. Values shown are posterior medians (filled circles) and 95% credible intervals (solid lines). Also shown is a comparison to a zero effect (solid vertical line). Values that do not overlap zero are shaded in red. Horizontal bars separate coefficients in distinct predictor categories. Coefficient estimates are reported relative to standardized predictor variables centered at zero with unit variance and correspond with $\\beta$ from Equation 1.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/fe-1.pdf")
 ```
 
-```{r re-1, fig.cap = "Regionally varying effect of watershed land-use cover for best-fit lake TP and TN models. Lines shown are 95% credible intervals with median marked by a filled circle. Values that do not overlap the population level estimate are shaded in red.", warning=FALSE, echo = FALSE}
+```{r re-1, fig.cap = "Regionally varying effect of watershed land-use cover for best-fit lake TP and TN models. Values shown are posterior medians (filled circles) and 95% credible intervals (solid lines). Also shown is a comparison to a zero effect (solid vertical line. Values that do not overlap the population level effect are shaded in red. Coefficient estimates correspond with $\\gamma$ from Equation 1.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/re-1.pdf")
 ```
 
@@ -45,6 +45,6 @@ knitr::include_graphics("../figures/re-1.pdf")
 knitr::include_graphics("../figures/tn_re_hu4-1.pdf")
 ```
 
-```{r tn_re_compare-1, fig.cap = "Histograms showing the distribution of Clay for regions sensitive to watershed land-use (see highlighted credible intervals in Figure 4) relative to all other regions. Medians for each group are shown as vertical dashed lines.", warning=FALSE, echo = FALSE}
+```{r tn_re_compare-1, fig.cap = "Histograms showing the distribution of soil clay content for regions sensitive to watershed land-use (see highlighted credible intervals in Figure 4) relative to all other regions. Medians for each group are shown as vertical dashed lines.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/tn_re_compare-1.pdf")
 ```
