--- a/manuscript/appendix.Rmd
+++ b/manuscript/appendix.Rmd
@@ -40,7 +40,7 @@ knitr::include_graphics("../figures/cdl_vs_nlcd-1.pdf")
 \end{center}
 
 ```{r 02_cdl_key, results='asis', warning=FALSE, echo = FALSE}
-knitr::kable('', col.names = NULL, caption = "CDL category definitions. See code supplement for listing of variables classified as 'ag'")
+knitr::kable('', col.names = NULL, caption = "2010 CDL category definitions. See code supplement for listing of variables classified as 'ag'")
 ```
 
 \pagebreak
