--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -241,15 +241,21 @@ global_offset <- dplyr::filter(re_global,
 fit_tp$re <- fit_tp$re %>%
   mutate_at(vars(matches("%")), function(x) x + as.numeric(global_offset))
 
+hu4_key <- dplyr::select(st_drop_geometry(hu4), HUC4, ZoneID, Lon) %>%
+  mutate(hu4vzoneid = gsub("HU4_", "", ZoneID))
+fit_tp$re <- left_join(fit_tp$re, hu4_key, by = "hu4vzoneid") %>%
+  arrange(desc(Lon))
+fit_tp$re$HUC4 <- factor(fit_tp$re$HUC4, levels = fit_tp$re$HUC4)
+
 gg_tp_re <- ggplot(data = fit_tp$re) +
-  geom_pointrange(aes(x = hu4vzoneid, y = `50%`, 
+  geom_pointrange(aes(x = HUC4, y = `50%`, 
                       ymin = `5%`, ymax = `95%`, color = signif)) +
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
   geom_hline(yintercept = as.numeric(global_offset)) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ggtitle("TP") + xlab("Zone ID") +
+  ggtitle("TP") + xlab("HUC4 ID") +
   theme(plot.title = element_text(hjust = 0.5, face = "bold")) +
   theme(legend.position = 0)
 
@@ -293,16 +299,19 @@ global_offset <- dplyr::filter(re_global,
                                  as.character(fit_tn$formula)))["50%"]
 fit_tn$re <- fit_tn$re %>%
   mutate_at(vars(matches("%")), function(x) x + as.numeric(global_offset))
+fit_tn$re <- left_join(fit_tn$re, hu4_key, by = "hu4vzoneid") %>%
+  arrange(desc(Lon))
+fit_tn$re$HUC4 <- factor(fit_tn$re$HUC4, levels = fit_tn$re$HUC4)
 
 gg_tn_re <- ggplot(data = fit_tn$re) +
   geom_hline(yintercept = as.numeric(global_offset)) +
-  geom_pointrange(aes(x = hu4vzoneid, y = `50%`, 
+  geom_pointrange(aes(x = HUC4, y = `50%`, 
                       ymin = `5%`, ymax = `95%`, color = signif)) +
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ggtitle("TN") + xlab("Zone ID") +
+  ggtitle("TN") + xlab("HUC4 ID") +
   theme(plot.title = element_text(hjust = 0.5, face = "bold")) +
   theme(legend.position = 0)
 
@@ -349,7 +358,7 @@ gg_hist <- ggplot(data = dt_predictors) +
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
   labs(fill = "LULC Sensitive", color = "LULC Sensitive") +
   cowplot::theme_cowplot() +
-  theme(legend.position = c(0.7, 0.8)) +
+  theme(legend.position = c(0.6, 0.8)) +
   theme(rect = element_rect(fill = "transparent"), 
         strip.background = element_rect(fill = "transparent"), 
         strip.text = element_blank()) +
@@ -399,7 +408,7 @@ gg_tn_re
 
 ```
 
-```{r re}
+```{r re, fig.width=4.25}
 cowplot::plot_grid(
 cowplot::plot_grid(gg_tp_re + theme(axis.title.x = element_blank(), 
                                      plot.margin = unit(c(0,0,0,0), "cm")),
@@ -407,7 +416,7 @@ cowplot::plot_grid(gg_tp_re + theme(axis.title.x = element_blank(),
                                     axis.title.y = element_blank(), 
                                     axis.title.x = element_blank(),
                                     plot.margin = unit(c(0,0,0,0), "cm")), 
-                   rel_widths = c(1, 0.9)), 
+                   rel_widths = c(1, 0.8)), 
 ggplot(data.frame(x = 0, y = 0, label = "Standardized coefficients", stringsAsFactors = FALSE)) + 
   geom_text(aes(x = x, y = y, label = label), size = 5) +
   theme_void() + 
