--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -30,7 +30,7 @@ knitr::include_graphics("../figures/re-comparison-1.pdf")
 ```
 
 ```{r 03_model_summary, results='asis', warning=FALSE, echo = FALSE}
-knitr::kable('\\includegraphics[width=5in]{"../tables/03_model_summary"}', col.names = NULL, caption = "Diagnostics for each model listed by regionally varying coefficient. Table is sorted by decreasing R2 and expected log predictive density.")
+knitr::kable('\\includegraphics[width=5in]{"../tables/03_model_summary"}', col.names = NULL, caption = "Diagnostics for each model listed by regionally varying coefficient. Table is sorted by decreasing $R^2$ and expected log predictive density (ELPD). ELPD has a similar interpretation to information criterion measures like AIC. Typically models are considered to be different if they are separated by an AIC value of greater than 2, which is equivalent to an ELPD value of -1.")
 ```
 
 ```{r fe-1, fig.cap = "Global (fixed effect) coefficient values and credible intervals for best-fit lake TP and TN models. Values shown are posterior medians (filled circles) and 95% credible intervals (solid lines). Also shown is a comparison to a zero effect (solid vertical line). Values that do not overlap zero are shaded in red. Horizontal bars separate coefficients in distinct predictor categories. Coefficient estimates are reported relative to standardized predictor variables centered at zero with unit variance and correspond with $\\beta$ from Equation 1.", warning=FALSE, echo = FALSE}
