--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -20,7 +20,7 @@ knitr::include_graphics("../figures/11_map-1.pdf")
 ```
 
 ```{r 01_predictors, results='asis', warning=FALSE, echo = FALSE}
-knitr::kable('\\includegraphics[width=5in]{"../tables/01_predictors"}', col.names = NULL, caption = "Medians followed by first and third quantiles of predictor variables for 928 lakes.")
+knitr::kable('\\includegraphics[width=5in]{"../tables/01_predictors"}', col.names = NULL, caption = "Medians followed by first and third quantiles of predictor variables for 928 lakes. Also shown is whether each predictor is defined as an aggregate or granular measure of agriculture.")
 ```
 
 \pagebreak
