--- a/figures/07_model-selection_nolulc.Rmd
+++ b/figures/07_model-selection_nolulc.Rmd
@@ -105,7 +105,7 @@ gg_tn <- spread_draws(fit_tn, `b_.*`, regex = TRUE) %>%
                                       "Buffer configuration", "Lake", 
                                       "Land-use cover")))) %>%
   mutate(category = forcats::fct_recode(category, 
-                                        Buffer = "Buffer configuration", 
+                                        `Spatial\nconfig.` = "Buffer configuration", 
                                         LULC = "Land-use cover")) %>%
   arrange(category) %>%
   ungroup() %>% mutate(pretty = factor(pretty, levels = pretty)) %>%
